kotlin/programming-kotlin_code/iteration/output/immutable.output
immutable.kts:2:3: error: val cannot be reassigned
  i = i * 2 //ERROR
  ^
